--- a/PruebaTecnica_SaonGroup/PruebaTecnica_SaonGroup/PruebaTecnica_SaonGroup.csproj
+++ b/PruebaTecnica_SaonGroup/PruebaTecnica_SaonGroup/PruebaTecnica_SaonGroup.csproj
@@ -143,6 +143,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Job.cs" />
+    <Compile Include="Models\JobModel.cs" />
+    <Compile Include="Process\AccesoDatos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
